[package]
name = "rsp"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
dialoguer = "0.11.0"
prettytable = "0.10.0"
serde = {version = "1.0.219",features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
tokio = { version = "1.45.0", features = ["full"] }
